<resources>
    <string name="app_name">Android_MyMedia</string>
    <string name="menu_home">홈</string>
    <string name="menu_search">검색</string>
    <string name="menu_profile">상세 페이지</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    
    <!-- detail_fragment.xml -->
    <string name="button_like">Like</string>
    <string name="button_unlike">Unlike</string>
    <string name="button_share">Share</string>
    <string name="textView_title">제목</string>
    <string name="textView_channel">채널 이름</string>
    <string name="textView_description">설명</string>

    <string name="all">All</string>

</resources>