<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/detail_activity_scene"
    tools:context=".detail.DetailActivity">

    <ImageView
        android:id="@+id/detail_ib_backButton"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_back_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/detail_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_ib_backButton">

        <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
            android:id="@+id/detail_youtubeplayer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>


    <TextView
        android:id="@+id/detail_tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/textView_title"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_linearLayout" />

    <TextView
        android:id="@+id/detail_tv_channelName"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/textView_channel"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/detail_btn_like"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/detail_btn_like" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/detail_btn_like"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:background="@drawable/confirm_like_button"
        android:drawableEnd="@drawable/ic_heart_drawable"
        android:drawablePadding="-10dp"
        android:paddingEnd="10dp"
        android:text="@string/button_like"
        app:layout_constraintEnd_toStartOf="@+id/detail_btn_share"
        app:layout_constraintTop_toTopOf="@+id/detail_btn_share" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/detail_btn_share"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/confirm_share_button"
        android:drawableEnd="@drawable/ic_share_drawable"
        android:paddingEnd="10dp"
        android:text="@string/button_share"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_tv_title" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="16dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_btn_like">

        <TextView
            android:id="@+id/detail_tv_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textView_description"
            android:textColor="@color/black"
            android:textSize="17sp" />


    </ScrollView>

</androidx.constraintlayout.motion.widget.MotionLayout>